@jsneum01: injest scrape lotsawa

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ bilara-data/
 accesstoinsight/
 84000-texts/
 84000-data-tei/
+lotsawahouse-data/
 
 # Entity database (generated from ingested texts)
 dharma-agent/entities_db.json
